@@ -1,16 +1,16 @@
 package com.example.demo.model.dto;
 
-import java.security.PublicKey;
+import java.sql.Timestamp;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.example.demo.domain.ProjectEntity;
 
-import lombok.AllArgsConstructor;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import lombok.*;
 import lombok.experimental.SuperBuilder;
 
-@Data
+@Getter
+@Setter
 @AllArgsConstructor
 @NoArgsConstructor
 @SuperBuilder
@@ -26,16 +26,19 @@ public class ProjectDto extends BaseDto<Long> {
 
 	private String other;
 
-	private long dateFrom;
+	private Timestamp fromDate;
 
-	private Long dateTo;
+	private Timestamp toDate;
+
+	private Long userId;
+
 
 	public static ProjectDto convertToDto(ProjectEntity entity) {
 		if (entity == null)
 			return null;
 		return ProjectDto.builder().title(entity.getTitle()).description(entity.getDescription())
-				.responisble(entity.getResponisble()).langages(entity.getLangages()).other(entity.getOther())
-				.dateFrom(entity.getDateFrom()).dateTo(entity.getDateTo()).id(entity.getId())
+				.responisble(entity.getResponisble()).langages(entity.getLanguages()).other(entity.getOther())
+				.fromDate(entity.getFromDate()).toDate(entity.getToDate()).id(entity.getId())
 				.createAt(entity.getCreateAt()).upateAt(entity.getUpateAt()).createBy(entity.getCreateBy())
 				.updateBy(entity.getUpdateBy()).status(entity.getStatus()).build();
 	}
@@ -43,24 +46,25 @@ public class ProjectDto extends BaseDto<Long> {
 	public static List<ProjectDto> convertToDtos(List<ProjectEntity> entitys) {
 		if (entitys == null || entitys.size() == 0)
 			return null;
-		List<ProjectDto> projectDtos = entitys.stream().map(item -> ProjectDto.convertToDto(item)).toList();
+		List<ProjectDto> projectDtos = entitys.stream().map(item -> ProjectDto.convertToDto(item)).collect(Collectors.toList());
 		return projectDtos;
 	}
 
-	public static ProjectEntity convertToEntity(ProjectDto projectDto) {
+	public static ProjectEntity convertToEntity(ProjectDto projectDto, Long userId) {
 		if (projectDto == null)
 			return null;
 		return ProjectEntity.builder().title(projectDto.getTitle()).description(projectDto.getDescription())
-				.responisble(projectDto.getResponisble()).langages(projectDto.getLangages())
-				.other(projectDto.getOther()).dateFrom(projectDto.getDateFrom()).dateTo(projectDto.getDateTo())
+				.responisble(projectDto.getResponisble()).languages(projectDto.getLangages())
+				.other(projectDto.getOther()).fromDate(projectDto.getFromDate()).toDate(projectDto.getToDate())
+				.userId(userId != null ? userId : projectDto.getUserId())
 				.id(projectDto.getId()).createAt(projectDto.getCreateAt()).upateAt(projectDto.getUpateAt())
 				.createBy(projectDto.getCreateBy()).updateBy(projectDto.getUpdateBy()).status(projectDto.getStatus())
 				.build();
 	}
 
-	public static List<ProjectEntity> convertToEntities(List<ProjectDto> projectDtos) {
+	public static List<ProjectEntity> convertToEntities(List<ProjectDto> projectDtos, Long userId) {
 		if (projectDtos == null || projectDtos.size() == 0)
 			return null;
-		return projectDtos.stream().map(item -> ProjectDto.convertToEntity(item)).toList();
+		return projectDtos.stream().map(item -> ProjectDto.convertToEntity(item, userId)).collect(Collectors.toList());
 	}
 }
