@@ -1,6 +1,7 @@
 package com.example.demo.model.dto;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.example.demo.domain.WorkEntity;
 
@@ -42,21 +43,22 @@ public class WorkDto extends BaseDto<Long> {
 	public static List<WorkDto> convertToDtos(List<WorkEntity> entity) {
 		if (entity == null || entity.size() == 0)
 			return null;
-		return entity.stream().map(item -> WorkDto.convertToDto(item)).toList();
+		return entity.stream().map(item -> WorkDto.convertToDto(item)).collect(Collectors.toList());
 	}
 
-	public static WorkEntity convertToEntity(WorkDto workDto) {
+	public static WorkEntity convertToEntity(WorkDto workDto, Long resumeId) {
 		if (workDto == null)
 			return null;
 		return WorkEntity.builder().company(workDto.getCompany()).title(workDto.getTitle())
 				.yearStart(workDto.getYearStart()).yearEnd(workDto.getYearEnd()).description(workDto.getDescription())
-				.id(workDto.getId()).createAt(workDto.getCreateAt()).upateAt(workDto.getUpateAt())
-				.createBy(workDto.getCreateBy()).updateBy(workDto.getUpdateBy()).status(workDto.getStatus()).build();
+				.resumeId(resumeId != null ? resumeId : workDto.getResume().getId()).id(workDto.getId())
+				.createAt(workDto.getCreateAt()).upateAt(workDto.getUpateAt()).createBy(workDto.getCreateBy())
+				.updateBy(workDto.getUpdateBy()).status(workDto.getStatus()).build();
 	}
 
-	public static List<WorkEntity> convertToEnities(List<WorkDto> workDtos) {
+	public static List<WorkEntity> convertToEnities(List<WorkDto> workDtos, Long resumeId) {
 		if (workDtos == null || workDtos.size() == 0)
 			return null;
-		return workDtos.stream().map(item -> WorkDto.convertToEntity(item)).toList();
+		return workDtos.stream().map(item -> WorkDto.convertToEntity(item, resumeId)).collect(Collectors.toList());
 	}
 }
