@@ -1,18 +1,19 @@
 package com.example.demo.service.imp;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Service;
 
-import com.example.demo.common.EStatus;
 import com.example.demo.domain.SocialEntity;
-import com.example.demo.domain.UserEntity;
 import com.example.demo.model.dto.SocialDto;
 import com.example.demo.model.dto.UserDto;
 import com.example.demo.repository.SocialRepository;
 import com.example.demo.repository.UserRepository;
 import com.example.demo.service.IUserService;
 
+@Service
 public class UserServiceImp implements IUserService {
 
 	@Autowired
@@ -25,7 +26,7 @@ public class UserServiceImp implements IUserService {
 	public UserDto getById(Long id) {
 		if (id == null)
 			return null;
-		return UserDto.convertToDto(userRepository.findById(id).orElseThrow());
+		return UserDto.convertToDto(userRepository.findById(id).orElse(null));
 	}
 
 	@Override
@@ -38,24 +39,22 @@ public class UserServiceImp implements IUserService {
 		if (dto == null)
 			return null;
 
-		UserEntity userEntity = userRepository.save(UserDto.convertToEntity(dto));
-		if (userEntity != null) {
-			List<SocialDto> socialDtos = dto.getCreateSocials();
-			List<SocialEntity> socialEntities = socialRepository
-					.saveAll(SocialDto.convertToEntities(socialDtos, userEntity.getId()));
-			if (socialEntities != null && socialEntities.size() != 0) {
-				userEntity.setSocials(socialEntities);
-				return UserDto.convertToDto(userEntity);
-			}
+		UserDto userDto = UserDto.convertToDto(userRepository.save(UserDto.convertToEntity(dto)));
+
+		if (dto.getAddSocials() != null && dto.getAddSocials().size() != 0) {
+			List<SocialDto> socialDtos = SocialDto.convertToDtos(
+					socialRepository.saveAll(SocialDto.convertToEntities(dto.getAddSocials(), userDto.getId())));
+			userDto.setSocials(socialDtos);
 		}
-		return null;
+
+		return userDto;
 	}
 
 	@Override
 	public List<UserDto> addList(List<UserDto> dtos) {
 		if (dtos == null || dtos.size() == 0)
 			return null;
-		return dtos.stream().map(item -> add(item)).toList();
+		return dtos.stream().map(item -> add(item)).collect(Collectors.toList());
 	}
 
 	@Override
@@ -64,39 +63,39 @@ public class UserServiceImp implements IUserService {
 		if (dto == null || !socialRepository.existsByUserId(dto.getId())) {
 			return null;
 		}
-		List<SocialDto> createSocialDtos = dto.getCreateSocials();
-		
+		List<SocialDto> createSocialDtos = dto.getAddSocials();
+
 		socialRepository.saveAll(SocialDto.convertToEntities(createSocialDtos, dto.getId()));
-		
+
 		List<SocialDto> updateSocialDtos = dto.getUpdateSocials();
 		updateSocialDtos.forEach(item -> {
-			if(socialRepository.existsById(item.getId())) {
+			if (socialRepository.existsById(item.getId())) {
 				socialRepository.save(SocialDto.convertToEntity(item, dto.getId()));
 			}
 		});
-		
+
 		List<SocialDto> deleteSocialDtos = dto.getDeleteSocials();
 		deleteSocialDtos.forEach(item -> {
-			if(socialRepository.existsById(item.getId())) {
+			if (socialRepository.existsById(item.getId())) {
 				socialRepository.deleteById(item.getId());
 			}
 		});
-		
+
 		return UserDto.convertToDto(userRepository.getById(dto.getId()));
 	}
 
 	@Override
 	public List<UserDto> updateList(List<UserDto> dtos) {
-		if(dtos == null || dtos.size() != 0)
-		return null;
-		return dtos.stream().map(item -> update(item)).toList();
+		if (dtos == null || dtos.size() != 0)
+			return null;
+		return dtos.stream().map(item -> update(item)).collect(Collectors.toList());
 	}
 
 	@Override
 	public void delete(UserDto dto) {
 		if (dto != null) {
 			List<SocialEntity> socialEntities = socialRepository.findByUserId(dto.getId());
-			socialRepository.deleteAllById(socialEntities.stream().map(item -> item.getId()).toList());
+			socialRepository.deleteAllById(socialEntities.stream().map(item -> item.getId()).collect(Collectors.toList()));
 			userRepository.delete(UserDto.convertToEntity(dto));
 		}
 	}
@@ -104,7 +103,7 @@ public class UserServiceImp implements IUserService {
 	@Override
 	public void deleteList(List<UserDto> dtos) {
 		if (dtos != null && dtos.size() != 0) {
-			dtos.stream().filter(item -> userRepository.existsById(item.getId())).toList();
+			dtos.stream().filter(item -> userRepository.existsById(item.getId())).collect(Collectors.toList());
 			userRepository.deleteAll(UserDto.convertToEntities(dtos));
 		}
 	}
@@ -119,7 +118,7 @@ public class UserServiceImp implements IUserService {
 	@Override
 	public void deleteByIds(List<Long> ids) {
 		if (ids != null && ids.size() != 0) {
-			ids.stream().filter(item -> userRepository.existsById(item)).toList();
+			ids.stream().filter(item -> userRepository.existsById(item)).collect(Collectors.toList());
 			userRepository.deleteAllById(ids);
 		}
 	}
